added more colors and utilities

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 // colous:
-$color-primary: #9356DC;
+$color-primary: #9356dc;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
-$light-gray: #f5f5f5;
-$dark-gray: #636363;
+$light-gray: #f7f7f7;
+$dark-gray: #7a7a7a;
