--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -12,8 +12,16 @@
     align-items: center;
 }
 
+.color-primary {
+    color: $color-primary;
+}
+
 .dark-gray {
     color: $dark-gray;
+}
+
+.light-gray {
+    color: $light-gray;
 }
 
 .bkg-light-gray {
@@ -21,11 +29,11 @@
 }
 
 .text-title {
-    font-size: 200%;
+    font-size: 180%;
 }
 
 .text-large {
-    font-size: 160%;
+    font-size: 145%;
     text-align: center;
 }
 
