updated spacing values

--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -1,9 +1,9 @@
 .spacing-icon {
-    padding: 0 20px;
+    padding-right: 20px;
 }
 
 .spacing {
-    padding: 40px 0 60px 0;
+    padding: 40px 20px 60px 20px;
 }
 
 .bottom-spacing {
