--- a/css/styles.css
+++ b/css/styles.css
@@ -10,17 +10,23 @@ body {
   justify-content: center;
   align-items: center; }
 
+.color-primary {
+  color: #9356dc; }
+
 .dark-gray {
-  color: #636363; }
+  color: #7a7a7a; }
+
+.light-gray {
+  color: #f7f7f7; }
 
 .bkg-light-gray {
-  background-color: #f5f5f5; }
+  background-color: #f7f7f7; }
 
 .text-title {
-  font-size: 200%; }
+  font-size: 180%; }
 
 .text-large {
-  font-size: 160%;
+  font-size: 145%;
   text-align: center; }
 
 .text {
@@ -32,10 +38,10 @@ body {
 .button {
   min-width: 230px;
   box-shadow: 0 6px 15px -8px black;
-  background: #9356DC;
-  background: linear-gradient(355deg, #9356DC, #FF79DA);
+  background: #9356dc;
+  background: linear-gradient(355deg, #9356dc, #FF79DA);
   padding: 20px;
-  color: #f5f5f5;
+  color: #f7f7f7;
   border-radius: 30px;
   text-align: center;
   text-decoration: none; }
@@ -64,10 +70,32 @@ body {
   background-color: #e9e9e9; }
 
 .spacing-icon {
-  padding: 0 20px; }
+  padding-right: 20px; }
 
 .spacing {
-  padding: 40px 0 60px 0; }
+  padding: 40px 20px 60px 20px; }
 
 .bottom-spacing {
   padding: 0 0 35px 0; }
+
+.how-work li {
+  background-color: #f7f7f7;
+  max-width: 295px;
+  padding: 25px 15px 25px 40px;
+  margin-bottom: 30px;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 20px;
+  box-shadow: 3px 6px 20px -6px silver; }
+
+.how-work li::marker {
+  background-color: aqua; }
+
+.how-work i {
+  font-size: 120%; }
+
+.how-work {
+  margin-top: -30px; }
+
+.how-work li:last-child {
+  background-color: rgba(147, 86, 220, 0.1); }
