--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@
 body {
   font-family: 'roboto'; }
 
+a {
+  text-decoration: none; }
+
+a:visited {
+  color: inherit; }
+
 .column {
   display: flex;
   flex-direction: column;
@@ -22,18 +28,26 @@ body {
 .bkg-light-gray {
   background-color: #f7f7f7; }
 
+.bkg-light-black {
+  background-color: #353535; }
+
+.white {
+  color: white; }
+
 .text-title {
   font-size: 180%; }
 
 .text-large {
-  font-size: 145%;
-  text-align: center; }
+  font-size: 145%; }
 
 .text {
   font-size: 130%; }
 
 .max-width {
   max-width: 350px; }
+
+.logo-font {
+  font-family: shrikhand; }
 
 .button {
   min-width: 230px;
@@ -78,6 +92,9 @@ body {
 .bottom-spacing {
   padding: 0 0 35px 0; }
 
+.spacing-top {
+  padding: 25px; }
+
 .info-list {
   list-style: none;
   counter-reset: number;
@@ -113,3 +130,41 @@ body {
 
 .info-list .active {
   background-color: #f2eafb; }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 7px solid white;
+  border-radius: 20px;
+  box-shadow: 0px 0px 30px 2px #cacaca;
+  border: hidden;
+  margin-top: 25px;
+  width: 100%;
+  height: 250px; }
+
+.restaurant-img {
+  height: 100%;
+  width: 100%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px; }
+
+.card-text {
+  padding: 18px; }
+
+.tag {
+  display: flex;
+  justify-content: end;
+  align-items: start; }
+
+.card-tag {
+  position: absolute;
+  display: flex;
+  background-color: #99e2d0;
+  color: #139273;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 35px;
+  border-radius: 2px;
+  margin: 12px; }
