--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,18 @@ a {
   text-decoration: none; }
 
 a:visited {
-  color: inherit; }
+  color: none; }
 
 .column {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; }
+
+.align-center {
   justify-content: center;
   align-items: center; }
+
+.small-gap {
+  gap: 10px; }
 
 .color-primary {
   color: #9356dc; }
@@ -41,13 +46,22 @@ a:visited {
   font-size: 145%; }
 
 .text {
-  font-size: 130%; }
+  font-size: 125%; }
+
+.s-icon {
+  font-size: 85%; }
+
+.xs-icon {
+  font-size: 70%; }
+
+.logo-font {
+  font-family: shrikhand; }
 
 .max-width {
   max-width: 350px; }
 
-.logo-font {
-  font-family: shrikhand; }
+.small-width {
+  width: 25px; }
 
 .button {
   min-width: 230px;
@@ -86,6 +100,9 @@ a:visited {
 .spacing-icon {
   padding-right: 20px; }
 
+.short-spacing-icon {
+  padding-right: 10px; }
+
 .spacing {
   padding: 40px 20px 60px 20px; }
 
@@ -93,7 +110,7 @@ a:visited {
   padding: 0 0 35px 0; }
 
 .spacing-top {
-  padding: 25px; }
+  padding-top: 20px; }
 
 .info-list {
   list-style: none;
@@ -144,6 +161,7 @@ a:visited {
   height: 250px; }
 
 .restaurant-img {
+  object-fit: cover;
   height: 100%;
   width: 100%;
   border-top-left-radius: 15px;
@@ -152,19 +170,11 @@ a:visited {
 .card-text {
   padding: 18px; }
 
-.tag {
-  display: flex;
-  justify-content: end;
-  align-items: start; }
-
 .card-tag {
   position: absolute;
-  display: flex;
   background-color: #99e2d0;
   color: #139273;
-  align-items: center;
-  justify-content: center;
-  width: 100px;
-  height: 35px;
+  right: 20px;
   border-radius: 2px;
-  margin: 12px; }
+  margin: 12px;
+  padding: 7px 30px; }
