--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -2,6 +2,10 @@
     padding-right: 20px;
 }
 
+.short-spacing-icon {
+    padding-right: 10px;
+}
+
 .spacing {
     padding: 40px 20px 60px 20px;
 }
@@ -11,5 +15,5 @@
 }
 
 .spacing-top {
-    padding: 25px;
+    padding-top: 20px;
 }
