--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -9,9 +9,20 @@
     margin-top: 25px;
     width: 100%;
     height: 250px;
+    position: relative;
 }
 
+.stretch-link:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+  }
+
 .restaurant-img {
+    object-fit: cover;
     height: 100%;
     width: 100%;
     border-top-left-radius: 15px;
@@ -22,21 +33,30 @@
     padding: 18px;
 }
 
-.tag {
-    display: flex;
-    justify-content: end;
-    align-items: start;
-}
+.card-text .column {
+    width: 50%;
+  }
 
 .card-tag {
     position: absolute;
-    display: flex;
     background-color: #99e2d0;
     color: #139273;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 35px;
+    right: 20px;
     border-radius: 2px;
     margin: 12px;
+    padding: 7px 30px;
 }
+
+.z-1 {
+    position: relative;
+    z-index: 1;
+    background-color: white;
+    border-style: hidden;
+    left: 130px;
+  }
+
+.fav-icon:active {
+    color: $color-secondary;
+}
+
+
