--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,18 @@ a {
   text-decoration: none; }
 
 a:visited {
-  color: none; }
+  color: inherit; }
+
+.footer a:visited {
+  color: white; }
 
 .column {
   display: flex;
   flex-direction: column; }
+
+.row {
+  display: flex;
+  flex-direction: row; }
 
 .align-center {
   justify-content: center;
@@ -47,6 +54,12 @@ a:visited {
 
 .text {
   font-size: 125%; }
+
+.text-center {
+  text-align: center; }
+
+.xl-icon {
+  font-size: 250%; }
 
 .s-icon {
   font-size: 85%; }
@@ -110,7 +123,7 @@ a:visited {
   padding: 0 0 35px 0; }
 
 .spacing-top {
-  padding-top: 20px; }
+  padding-top: 25px; }
 
 .info-list {
   list-style: none;
@@ -120,9 +133,10 @@ a:visited {
 .info-list li {
   counter-increment: number;
   background-color: #f7f7f7;
-  max-width: 295px;
+  max-width: 100%;
   padding: 25px 15px 25px 40px;
   margin-bottom: 30px;
+  margin-right: 20px;
   font-size: large;
   font-weight: bold;
   border-radius: 20px;
@@ -158,7 +172,16 @@ a:visited {
   border: hidden;
   margin-top: 25px;
   width: 100%;
-  height: 250px; }
+  height: 250px;
+  position: relative; }
+
+.stretch-link:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0; }
 
 .restaurant-img {
   object-fit: cover;
@@ -170,6 +193,9 @@ a:visited {
 .card-text {
   padding: 18px; }
 
+.card-text .column {
+  width: 50%; }
+
 .card-tag {
   position: absolute;
   background-color: #99e2d0;
@@ -178,3 +204,13 @@ a:visited {
   border-radius: 2px;
   margin: 12px;
   padding: 7px 30px; }
+
+.z-1 {
+  position: relative;
+  z-index: 1;
+  background-color: white;
+  border-style: hidden;
+  left: 130px; }
+
+.fav-icon:active {
+  color: #FF79DA; }
