--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,11 @@ body {
 a {
   text-decoration: none; }
 
-a:visited {
+a {
   color: inherit; }
 
-.footer a:visited {
-  color: white; }
+a:visited {
+  color: none; }
 
 .column {
   display: flex;
@@ -76,6 +76,10 @@ a:visited {
 .small-width {
   width: 25px; }
 
+.round-border {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px; }
+
 .button {
   min-width: 230px;
   box-shadow: 0 6px 15px -8px black;
@@ -88,19 +92,20 @@ a:visited {
   text-decoration: none; }
 
 .navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 25px 0 15px 0;
-  box-shadow: 0 8px 6px -6px #acacac;
   position: relative; }
+
+.navbar-shadow {
+  box-shadow: 0 8px 6px -6px #acacac; }
 
 .navbar-logo {
   max-width: 180px; }
 
 .back-icon {
-  visibility: hidden;
-  color: black;
+  text-align: center;
+  width: 40px;
+  margin: 0 66px 0 12px;
+  color: #404040;
   font-size: 165%; }
 
 .location-info {
@@ -186,9 +191,7 @@ a:visited {
 .restaurant-img {
   object-fit: cover;
   height: 100%;
-  width: 100%;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px; }
+  width: 100%; }
 
 .card-text {
   padding: 18px; }
@@ -200,7 +203,7 @@ a:visited {
   position: absolute;
   background-color: #99e2d0;
   color: #139273;
-  right: 20px;
+  right: 15px;
   border-radius: 2px;
   margin: 12px;
   padding: 7px 30px; }
@@ -212,5 +215,15 @@ a:visited {
   border-style: hidden;
   left: 130px; }
 
-.fav-icon:active {
-  color: #FF79DA; }
+.solid-icon {
+  position: absolute;
+  opacity: 0;
+  background: #FF79DA;
+  background: linear-gradient(355deg, #FF79DA, #9356dc);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent; }
+
+.solid-icon:hover {
+  opacity: 1;
+  transition: opacity 100ms; }
