--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,4 +4,6 @@ $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $light-gray: #f7f7f7;
 $dark-gray: #7a7a7a;
+$graphite: #535353;
 $light-black: #353535;
+$light-green: #99e2d0;
