removed useless features

--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -48,7 +48,7 @@
 .z-1 {
     position: relative;
     z-index: 1;
-    background-color: white;
+    background-color: transparent;
     border-style: hidden;
     left: 130px;
   }
