--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -1,3 +1,17 @@
+.card-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-top: 20px;
+
+}
+
+.card-group .card {
+    min-width: 350px;
+    flex: 1 1 0;
+}
+
+
 .card {
     display: flex;
     flex-direction: column;
@@ -6,8 +20,6 @@
     border-radius: 20px;
     box-shadow: 0px 0px 30px 2px #cacaca;
     border: hidden;
-    margin-top: 25px;
-    width: 100%;
     height: 250px;
     position: relative;
 }
