cards grid fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -321,3 +321,88 @@ a:visited {
   .dishes:hover .dish-icon i {
     transform: rotate(360deg);
     transition: 0.7s; }
+
+.menu--fade {
+  animation-name: menu-fade;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  opacity: 0; }
+
+.menu--fade-1 {
+  animation-delay: 0.1s; }
+
+.menu--fade-2 {
+  animation-delay: 0.2s; }
+
+.menu--fade-3 {
+  animation-delay: 0.3s; }
+
+@keyframes menu-fade {
+  0% {
+    opacity: 0;
+    transform: translate(0, 200px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+.loader {
+  background-color: #f7f7f7;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: loader-fade;
+  animation-duration: 1.5s;
+  animation-delay: 1.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  z-index: 1; }
+
+@keyframes loader-fade {
+  0% {
+    opacity: 1; }
+  99% {
+    opacity: 0;
+    top: 0;
+    bottom: 0; }
+  100% {
+    top: -10000px;
+    bottom: auto; } }
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px; }
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #535353;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #535353 transparent transparent transparent; }
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s; }
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s; }
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s; }
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
