--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     gap: 25px;
     margin-top: 20px;
+    max-width: 1080px;
 
 }
 
@@ -37,6 +38,7 @@
     object-fit: cover;
     height: 100%;
     width: 100%;
+    max-height: 300px;
 }
 
 .card-text {
@@ -62,13 +64,17 @@
     z-index: 1;
     background-color: transparent;
     border-style: hidden;
-    left: 130px;
   }
+
+.card-icon {
+    left: 135px;
+}
 
 
 .solid-icon {
     position: absolute;
     opacity: 0;
+    transition: opacity 300ms;
     background: $color-secondary;
     background: linear-gradient(355deg, $color-secondary, $color-primary);
     background-clip: text;
@@ -78,6 +84,32 @@
 
 .solid-icon:hover {
     opacity: 1;
-    transition: opacity 100ms;
 }
 
+
+@media (min-width: 770px) {
+
+    .card {
+        height: 300px;
+    }
+
+    .card-group {
+        gap: 40px;
+        justify-content: center;
+    }
+
+    .restaurants {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            font-size: xx-large;
+        }
+
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+    }
+}
