fixed navbar, and menu layout

--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -179,8 +179,7 @@
     }
 
     .footer-gap {
-        gap: 200px;
-        justify-content: center;
+        justify-content: space-between;
     }
 
     .desktop-img {
