--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,11 @@ a:visited {
 
 .navbar {
   padding: 25px 0 15px 0;
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; }
 
 .navbar-shadow {
   box-shadow: 0 8px 6px -6px #acacac; }
@@ -141,11 +145,12 @@ a:visited {
   max-width: 180px; }
 
 .back-icon {
-  text-align: center;
+  position: absolute;
+  left: 0;
   width: 40px;
-  margin: 0 66px 0 12px;
   color: #404040;
-  font-size: 165%; }
+  font-size: 165%;
+  left: 25px; }
 
 .location-info {
   display: flex;
@@ -321,44 +326,46 @@ a:visited {
 
 .dishes {
   background-color: white;
-  padding: 12px 15px 0px 10px;
-  margin: 15px 0 0 -5px;
   border-radius: 15px;
-  box-shadow: 0px 5px 12px 0px #e6e6e6; }
-
-.dishes .column {
-  overflow: hidden; }
+  box-shadow: 0px 5px 12px 0px #e6e6e6;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  display: flex;
+  margin: 15px 0; }
 
 .ellipsis {
+  margin: 0;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden; }
 
 .dishes p {
-  padding: 5px 0 12px 0;
   font-size: 130%;
   color: #535353; }
 
 .double {
-  width: 100%; }
+  width: 100%;
+  padding: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column; }
 
 .price {
-  font-weight: bold;
+  display: flex;
   align-items: end;
-  justify-content: end;
-  padding: 0 25px; }
+  padding: 15px 20px; }
 
 .dish-icon {
+  display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   font-size: 185%;
-  margin-right: -15px;
-  margin-top: -12px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #99e2d0;
   color: white;
-  text-align: center;
   width: 0; }
 
 .dishes:hover .dish-icon {
@@ -394,9 +401,9 @@ a:visited {
 
 @media (min-width: 770px) {
   .menu-dishes {
-    width: 33.3%; }
-  .menu-gap {
-    gap: 20px; }
+    flex: 0 0 auto;
+    width: 33.333%;
+    padding: 0 15px; }
   .menu-title {
     padding: 10px 50px;
     flex-basis: 1250px; } }
