--- a/src/_menu.scss
+++ b/src/_menu.scss
@@ -27,18 +27,18 @@
 
 .dishes {
     background-color: white;
-    padding: 12px 15px 0px 10px;
-    margin: 15px 0 0 -5px;
     border-radius: 15px;
     box-shadow: 0px 5px 12px 0px rgb(230, 230, 230);
+    position: relative;
+	overflow: hidden;
+	cursor: pointer;
+	display: flex;
+    margin: 15px 0;
 }
 
-
-.dishes .column {
-    overflow: hidden;
-}
 
 .ellipsis {
+    margin: 0;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -46,33 +46,34 @@
 
 
 .dishes p {
-    padding: 5px 0 12px 0;
     font-size: 130%;
     color: $graphite;
 }
 
 .double {
     width: 100%;
+    padding: 15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .price {
-    font-weight: bold;
+    display: flex;
     align-items: end;
-    justify-content: end;
-    padding: 0 25px;
+    padding: 15px 20px ;
 }
 
 .dish-icon {
+    display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     font-size: 185%;
-    margin-right: -15px;
-    margin-top: -12px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color: $light-green;
     color: white;
-    text-align: center;
     width: 0;
 }
 
@@ -123,11 +124,9 @@
 
 @media (min-width: 770px) {
     .menu-dishes {
-        width: 33.3%;
-    }
-
-    .menu-gap {
-        gap: 20px;
+        flex: 0 0 auto;
+        width: 33.333%;
+        padding: 0 15px;
     }
 
     .menu-title {
