--- a/src/_navbar.scss
+++ b/src/_navbar.scss
@@ -1,6 +1,10 @@
 .navbar {
     padding: 25px 0 15px 0;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .navbar-shadow {
@@ -12,10 +16,11 @@
 }
 
 .back-icon {
-    text-align: center;
+    position: absolute;
+    left: 0;
     width: 40px;
-    margin: 0 66px 0 12px;
     color: lighten(black, 25%);
     font-size: 165%;
+    left: 25px;
 }
 
