--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,8 @@ a {
   font-size: 70%; }
 
 .logo-font {
-  font-family: shrikhand; }
+  font-family: shrikhand;
+  font-weight: normal; }
 
 .full-width {
   width: 100%; }
@@ -125,7 +126,8 @@ a {
 
 .button:hover {
   box-shadow: 0 6px 25px -8px black;
-  transition: 200ms; }
+  transition: 200ms;
+  background: linear-gradient(355deg, #985ede, #ff83dd); }
 
 .navbar {
   padding: 25px 0 15px 0;
@@ -227,11 +229,9 @@ a {
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 7px solid white;
   border-radius: 20px;
   box-shadow: 0px 0px 30px 2px #cacaca;
   border: hidden;
-  height: 250px;
   position: relative; }
 
 .stretch-link:before {
@@ -244,7 +244,7 @@ a {
 
 .restaurant-img {
   object-fit: cover;
-  height: 100%;
+  height: 235px;
   width: 100%;
   max-height: 300px; }
 
@@ -283,8 +283,6 @@ a {
   opacity: 1; }
 
 @media (min-width: 770px) {
-  .card {
-    height: 300px; }
   .card-group {
     gap: 40px;
     justify-content: center; }
